welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:1: error: not found: value growFlowers
def jardiniere(){growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE);growFlowers()}
                 ^FlowerCase:1: error: not found: value growFlowers
def jardiniere(){growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE);growFlowers()}
                                                                                                         ^